<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shut Up &amp; Drive!</string>
    <string name="action_settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="feature_driving_detection">Driving detection</string>
    <string name="description_driving_detection">Automatically turns on while driving</string>
    <string name="feature_auto_reply">Auto reply</string>
    <string name="description_auto_reply">Automatically responds to messages while driving</string>
    <string name="feature_caller_id_readout">Caller ID readout</string>
    <string name="description_caller_id_readout">Reads out who\'s calling while driving</string>
    <string name="description_main">Turns on when you drive to keep you safe and focused on the road</string>
    <string name="stay_safe">Stay safe while you drive</string>
    <string name="banner_ad_unit_id">ca-app-pub-5617453255042566/1905751930</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="next_button">Next</string>
    <string name="no_connection">No connection to Google Play Services</string>
    <string name="default_message">I am driving right now, I will contact you later —Auto reply message—</string>
    <string name="phone_option_block">Blocking calls</string>
    <string name="phone_option_read">Reading caller ID</string>
    <string name="phone_option_allow">Allowing calls</string>
    <string name="exit_car_mode">Touch to exit car mode.</string>
    <string name="car_mode_on">Car mode enabled</string>
    <string name="dkb_software">{ DKB }\nSoftware</string>

    <string name="key_running">Running</string>
    <string name="key_not_driving_time">NotDrivingTime</string>
    <string name="key_gps_driving">gpsDrive</string>
    <string name="key_gps">gps</string>
    <string name="key_auto_reply_message">msg</string>
    <string name="key_auto_reply">autoReply</string>
    <string name="key_phone_option">phoneOpt</string>
    <string name="key_first_time">firstTime2</string>
    <string name="key_start_time">StartTime</string>
    <string name="key_total_time">TotalTime</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="action_share">Share</string>
    <string name="dot">• </string>
    <string name="get_started">GET STARTED</string>
    <string name="pref_auto_reply_message_title">Auto reply message</string>
    <string name="pref_auto_reply_message_summary">This message will be automatically sent while driving.</string>
    <string name="pref_auto_reply_title">Auto reply</string>
    <string name="pref_improve_accuracy_title">Improve accuracy (experimental)</string>
    <string name="pref_phone_calls_title">Phone calls</string>
    <string name="pref_read_text_title">Read out messages</string>
    <string name="key_read_messages">readMessages</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>


</resources>
