<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_auto_reply"
        android:title="@string/pref_auto_reply_title" />
    <EditTextPreference
        android:key="@string/key_auto_reply_message"
        android:summary="@string/pref_auto_reply_message_summary"
        android:title="@string/pref_auto_reply_message_title" />
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/phoneOptions"
        android:entryValues="@array/phoneValues"
        android:key="@string/key_phone_option"
        android:title="@string/pref_phone_calls_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/pref_read_text_title"
        android:key="@string/key_read_messages"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_gps"
        android:title="@string/pref_improve_accuracy_title" />
</PreferenceScreen>