<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.DKB.shutupdrive.MainActivity">
    <item
        android:id="@+id/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="@string/action_share"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_tutorial"
        android:orderInCategory="2"
        android:title="@string/tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
